comment out ignore paths

--- a/.github/workflows/main-iac.yml
+++ b/.github/workflows/main-iac.yml
@@ -5,8 +5,8 @@ on:
     - develop
     paths:
     - '.iac/**'
-    paths-ignore:
-    - '**/*.md'
+    # paths-ignore:
+    # - '**/*.md'
   workflow_dispatch:
     branches:
     - develop
