correct yml parameters

--- a/.github/workflows/main-iac.yml
+++ b/.github/workflows/main-iac.yml
@@ -36,7 +36,7 @@ jobs:
       #     path: main-prod.json
   deployDevelopment:
     # needs: build
-    name: Deploy to development
+    name: Deploy IaC to development
     environment:
       name: development
     runs-on: ubuntu-latest
@@ -65,14 +65,15 @@ jobs:
         # subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
         region: eastus
         template: ./.iac/main-dev.bicep
-        resourceGroupLocation: 'eastus'
-        tagEnvironmentNameTier: 'development'
-        rgBackendName: 'us1-resume-be-dev-v3-rg'
-        rgFrontendName: 'us1-resume-fe-dev-v3-rg'
-        vnetName: 'vnet-d-eus-001'
-        vnetAddressPrefix: '12.0.0.0/16'
-        subnetName1: 'snet-d-eus-001-aks-pool01'
-        subnetPrefix1: '12.0.1.0/24'
+        parameters: 
+                  resourceGroupLocation=  eastus
+                  tagEnvironmentNameTier= development
+                  rgBackendName=  us1-resume-be-dev-v3-rg
+                  rgFrontendName= us1-resume-fe-dev-v3-rg
+                  vnetName= vnet-d-eus-001
+                  vnetAddressPrefix=  12.0.0.0/16
+                  subnetName1=  snet-d-eus-001-aks-pool01
+                  subnetPrefix1=  12.0.1.0/24
   # DeployProduction:
   #   needs: deployDevelopment
   #   name: Deploy to production
