--- a/.github/workflows/main-iac.yml
+++ b/.github/workflows/main-iac.yml
@@ -75,7 +75,7 @@ jobs:
                   resourceGroupLocation=eastus
                   tagEnvironmentNameTier=development
                   tagCostCenter=abc123
-                  tagGitActionRunId=${{ env.GITHUB_RUN_ID }}
+                  tagGitActionRunId=${{ github.run_id }}
                   rgBackendName=us1-resume-be-dev-v3-rg
                   rgFrontendName=us1-resume-fe-dev-v3-rg
                   vnetName=vnet-d-eus-001
