--- a/.github/workflows/main-iac.yml
+++ b/.github/workflows/main-iac.yml
@@ -8,8 +8,11 @@ on:
     # paths-ignore:
     # - '**/*.md'
   workflow_dispatch:
-    branches:
-    - develop
+    inputs:
+      stackLocation:
+        description: 'Input the Azure Region to create resources'
+        required: true
+        default: 'eastus'
 
 jobs:
   # build:
@@ -42,10 +45,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@main
-    # - name: Download artifacts dev
-      # uses: actions/download-artifact@v2
-      # with:
-      #   name: main-dev
     - name: Azure Login
       uses: Azure/login@v1.1
       with:
@@ -80,16 +79,12 @@ jobs:
         echo "${{ github.server_url }}/${{ github.repository }}/actions/workflows/main-iac.yml"
         IACACTIONSLINK=${{ github.server_url }}/${{ github.repository }}/actions/workflows/main-iac.yml
         echo "::set-output name=IACACTIONSLINK::${IACACTIONSLINK}"
-
-  # $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
-  # https://github.com/rmcveyhsawaknow/azure-resume-iac/runs/6040625577
  
     - name: Deploy Azure Resource Manager (ARM) Template
       uses: Azure/arm-deploy@v1
       with:
         scope: subscription
         subscriptionId: ${{ steps.subs.outputs.subid }}
-        # subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
         region: eastus
         template: ./.iac/main-dev.bicep
         parameters: 
@@ -97,7 +92,7 @@ jobs:
                   tagGitActionIacRunNumber=${{ github.run_number }}
                   tagGitActionIacRunAttempt=${{ github.run_attempt }}
                   tagGitActionIacActionsLink=${{ steps.iacactionslink.outputs.iacactionslink}}
-                  resourceGroupLocation=eastus
+                  resourceGroupLocation=${{ github.event.inputs.stackLocation }}
                   tagEnvironmentNameTier=development
                   tagCostCenter=abc123
                   rgBackendName=us1-resume-be-dev-v3-rg
