--- a/.github/workflows/main-iac.yml
+++ b/.github/workflows/main-iac.yml
@@ -7,12 +7,14 @@ on:
     - '.iac/**'
     # paths-ignore:
     # - '**/*.md'
-  workflow_dispatch:
+
+  workflow_run:
     inputs:
       stackLocation:
         description: 'Input the Azure Region to create resources'
         required: true
         default: 'eastus'
+
 
 jobs:
   # build:
@@ -92,7 +94,7 @@ jobs:
                   tagGitActionIacRunNumber=${{ github.run_number }}
                   tagGitActionIacRunAttempt=${{ github.run_attempt }}
                   tagGitActionIacActionsLink=${{ steps.iacactionslink.outputs.iacactionslink}}
-                  resourceGroupLocation='${{ github.event.inputs.stackLocation }}'
+                  resourceGroupLocation=${{ github.event.inputs.stackLocation }}
                   tagEnvironmentNameTier=development
                   tagCostCenter=abc123
                   rgBackendName=us1-resume-be-dev-v3-rg
