--- a/.github/workflows/main-iac.yml
+++ b/.github/workflows/main-iac.yml
@@ -5,19 +5,17 @@ on:
     - develop
     paths:
     - '.iac/**'
-    # paths-ignore:
-    # - '**/*.md'
 
- 
-  workflow_call:
-    inputs:
-      stackLocation:
-        description: 'Input the Azure Region to create resources'
-        type: string
-        required: true
-        default: 'eastus'
+env: 
+  stackLocation: 'eastus'
 
-
+  # workflow_call:
+  #   inputs:
+  #     stackLocation:
+  #       description: 'Input the Azure Region to create resources'
+  #       type: string
+  #       required: true
+  #       default: 'eastus'
 
 jobs:
 
@@ -99,7 +97,7 @@ jobs:
                   tagGitActionIacRunNumber=${{ github.run_number }}
                   tagGitActionIacRunAttempt=${{ github.run_attempt }}
                   tagGitActionIacActionsLink=${{ steps.iacactionslink.outputs.iacactionslink}}
-                  resourceGroupLocation=${{ github.event.inputs.stackLocation }}
+                  resourceGroupLocation=${{ env:stackLocation }}
                   tagEnvironmentNameTier=development
                   tagCostCenter=abc123
                   rgBackendName=us1-resume-be-dev-v3-rg
