--- a/.github/workflows/main-iac.yml
+++ b/.github/workflows/main-iac.yml
@@ -8,37 +8,22 @@ on:
     - '.iac/**'
 
 env: 
+  stackVersion: 'v3'
   stackLocation: 'eastus'
+  stackLocationCode: 'us1'
+  AppName: 'resume'
+  AppBackendName: 'resumecounter'
+  tagCostCenter: 'xyz789'
 
 jobs:
 
-  # build:
-  #   name: Build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-      # - name: Bicep Build
-      #   uses: aliencube/bicep-build-actions@v0.1
-      #   with:
-      #     files: main-dev.bicep main-prod.bicep
-      # - run: ls
-      # - run: cat main-dev.json
-      # - run: cat main-prod.json
-      # - name: Publish Artifacts dev
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: main-dev
-      #     path: main-dev.json
-      # - name: Publish Artifacts
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: main-prod
-      #     path: main-prod.json
   deployDevelopment:
     # needs: build
     name: Deploy IaC to development
     environment:
       name: development
+    env:
+      stackEnvironment: 'dev'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@main
@@ -90,13 +75,13 @@ jobs:
                   tagGitActionIacRunAttempt=${{ github.run_attempt }}
                   tagGitActionIacActionsLink=${{ steps.iacactionslink.outputs.iacactionslink}}
                   resourceGroupLocation=${{env.stackLocation}}
-                  tagEnvironmentNameTier=development
-                  tagCostCenter=abc123
-                  rgBackendName=us1-resume-be-dev-v3-rg
-                  rgFrontendName=us1-resume-fe-dev-v3-rg
-                  vnetName=vnet-d-eus-001
+                  tagEnvironmentNameTier=${{env.stackEnvironment}}
+                  tagCostCenter=${{env.tagCostCenter}}
+                  rgBackendName=${{env.stackLocationCode}}-${{env.AppName}}-be-${{env.stackEnvironment}}-${{env.stackVersion}}-rg
+                  rgFrontendName=${{env.stackLocationCode}}-${{env.AppName}}-fe-${{env.stackEnvironment}}-${{env.stackVersion}}-rg
+                  vnetName=${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-vnet
                   vnetAddressPrefix=12.0.0.0/16
-                  subnetName1=snet-d-eus-001-aks-pool01
+                  subnetName1=${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-vnet-sn-1
                   subnetPrefix1=12.0.1.0/24
   # DeployProduction:
   #   needs: deployDevelopment
