--- a/.github/workflows/main-iac.yml
+++ b/.github/workflows/main-iac.yml
@@ -8,12 +8,12 @@ on:
     - '.iac/**'
 
 env: 
-  stackVersion: 'v4'
-  stackLocation: 'westus'
+  stackVersion: 'v2'
+  stackLocation: 'eastus'
   stackLocationCode: 'us2'
   AppName: 'resume'
   AppBackendName: 'resumecounter'
-  tagCostCenter: 'xyz789'
+  tagCostCenter: 'a1b2c3'
 
 jobs:
 
@@ -62,27 +62,27 @@ jobs:
         IACACTIONSLINK=${{ github.server_url }}/${{ github.repository }}/actions/workflows/main-iac.yml
         echo "::set-output name=IACACTIONSLINK::${IACACTIONSLINK}"
  
-    - name: Deploy Azure Resource Manager (ARM) Template
+    - name: Bicep - Backend
       uses: Azure/arm-deploy@v1
       with:
         scope: subscription
         subscriptionId: ${{ steps.subs.outputs.subid }}
-        region: eastus
-        template: ./.iac/main-dev.bicep
+        region: ${{env.stackLocation}}
+        template: ./.iac/backend-dev.bicep
         parameters: 
                   tagGitActionIacRunId=${{ github.run_id }}
                   tagGitActionIacRunNumber=${{ github.run_number }}
                   tagGitActionIacRunAttempt=${{ github.run_attempt }}
                   tagGitActionIacActionsLink=${{ steps.iacactionslink.outputs.iacactionslink}}
-                  resourceGroupLocation=${{env.stackLocation}}
                   tagEnvironmentNameTier=${{env.stackEnvironment}}
                   tagCostCenter=${{env.tagCostCenter}}
+                  resourceGroupLocation=${{env.stackLocation}}
                   rgBackendName=${{env.stackLocationCode}}-${{env.AppName}}-be-${{env.stackEnvironment}}-${{env.stackVersion}}-rg
                   rgFrontendName=${{env.stackLocationCode}}-${{env.AppName}}-fe-${{env.stackEnvironment}}-${{env.stackVersion}}-rg
-                  vnetName=${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-vnet
-                  vnetAddressPrefix=12.0.0.0/16
-                  subnetName1=${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-vnet-sn-1
-                  subnetPrefix1=12.0.1.0/24
+                  cosmosName=${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-cmsdb
+                  databaseName=azure-resume-click-count
+                  containerName=Counter
+                  defaultConsistencyLevel=Eventual
   # DeployProduction:
   #   needs: deployDevelopment
   #   name: Deploy to production
