--- a/.github/workflows/main-iac.yml
+++ b/.github/workflows/main-iac.yml
@@ -26,7 +26,7 @@ jobs:
       
     env:
       stackEnvironment: 'dev'
-      corsFriendlyDnsUriEnvironmental: https://$env.AppName$env.stackEnvironment$env.stackVersion.$env.dnsZone
+      corsFriendlyDnsUriEnvironmental: 'resumedev2.ryanmcvey.me'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@main
