kv with cosmos secret and SCMI, try1

--- a/.github/workflows/main-iac.yml
+++ b/.github/workflows/main-iac.yml
@@ -96,6 +96,7 @@ jobs:
                   corsCdnUri=https://${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-cdn
                   functionRuntime=dotnet
                   keyVaultName=${{env.stackLocationCode}}-${{env.AppBackendName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-kv
+                  keyVaultSku=standard
   # DeployProduction:
   #   needs: deployDevelopment
   #   name: Deploy to production
