--- a/.github/workflows/main-iac.yml
+++ b/.github/workflows/main-iac.yml
@@ -89,7 +89,6 @@ jobs:
                   functionAppAppInsightsName=${{env.stackLocationCode}}-${{env.AppBackendName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-ai
                   functionAppAppServicePlanName=${{env.stackLocationCode}}-${{env.AppBackendName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-asp
                   functionAppName=${{env.stackLocationCode}}-${{env.AppBackendName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-fa
-                  functionName=GetResumeCounter
                   functionAppKeySecretNamePrimary=AzureResumeConnectionStringPrimary
                   functionAppKeySecretNameSecondary=AzureResumeConnectionStringSecondary
                   corsFriendlyDnsUri=${{env.corsFriendlyDnsUriEnvironmental}}
@@ -97,6 +96,9 @@ jobs:
                   functionRuntime=dotnet
                   keyVaultName=${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-kv
                   keyVaultSku=standard
+  
+  #                functionName=GetResumeCounter
+  
   # DeployProduction:
   #   needs: deployDevelopment
   #   name: Deploy to production
