--- a/.github/workflows/main-iac.yml
+++ b/.github/workflows/main-iac.yml
@@ -26,7 +26,6 @@ jobs:
       
     env:
       stackEnvironment: 'dev'
-      corsFriendlyDnsUriEnvironmental: 'resumedev2.ryanmcvey.me'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@main
@@ -91,8 +90,8 @@ jobs:
                   functionAppName=${{env.stackLocationCode}}-${{env.AppBackendName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-fa
                   functionAppKeySecretNamePrimary=AzureResumeConnectionStringPrimary
                   functionAppKeySecretNameSecondary=AzureResumeConnectionStringSecondary
-                  corsFriendlyDnsUri=${{env.corsFriendlyDnsUriEnvironmental}}
-                  corsCdnUri=https://${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-cdn
+                  corsFriendlyDnsUri=https://${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}.${{env.dnsZone}}
+                  corsCdnUri=https://${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-cdn.azureedge.net
                   functionRuntime=dotnet
                   keyVaultName=${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-kv
                   keyVaultSku=standard
@@ -117,12 +116,37 @@ jobs:
                   rgFrontendName=${{env.stackLocationCode}}-${{env.AppName}}-fe-${{env.stackEnvironment}}-${{env.stackVersion}}-rg
                   staticSiteStorageAccountName=${{env.stackLocationCode}}${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}sa
                   staticSiteStorageAccountAppInsightsName=${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-ai
+    
     - name: Enable Storage Account Frontend Static Website
       uses: azure/CLI@v1
       with:
         inlineScript: |
             az storage blob service-properties update --account-name ${{env.stackLocationCode}}${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}sa --auth-mode login --static-website --404-document index.html --index-document index.html
 
+    # - name: Bicep - Frontend CDN and DNS
+    #   uses: azure/arm-deploy@v1
+    #   with:
+    #     scope: subscription
+    #     subscriptionId: ${{ steps.subs.outputs.subid }}
+    #     region: ${{env.stackLocation}}
+    #     template: ./.iac/frontendCdn-dev.bicep
+    #     parameters: 
+    #               cNameValue=${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}
+    #               dnsZoneValue=${{env.dnsZone}}
+    #               tagGitActionIacRunId=${{ github.run_id }}
+    #               tagGitActionIacRunNumber=${{ github.run_number }}
+    #               tagGitActionIacRunAttempt=${{ github.run_attempt }}
+    #               tagGitActionIacActionsLink=${{ steps.iacactionslink.outputs.iacactionslink}}
+    #               tagEnvironmentNameTier=${{env.stackEnvironment}}
+    #               tagCostCenter=${{env.tagCostCenter}}
+    #               resourceGroupLocation=${{env.stackLocation}}
+    #               rgFrontendName=${{env.stackLocationCode}}-${{env.AppName}}-fe-${{env.stackEnvironment}}-${{env.stackVersion}}-rg
+    #               staticSiteStorageAccountName=${{env.stackLocationCode}}${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}sa
+    #               staticSiteStorageAccountAppInsightsName=${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-ai
+    #     failOnStdErr: false 
+ 
+ 
+ 
   # DeployProduction:
   #   needs: deployDevelopment
   #   name: Deploy to production
