v5 add correct function app name to backend

--- a/.github/workflows/develop-full-stack.yml
+++ b/.github/workflows/develop-full-stack.yml
@@ -197,7 +197,7 @@ jobs:
       uses: Azure/functions-action@v1
       id: fa
       with:
-        app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
+        app-name: ${{env.stackLocationCode}}-${{env.AppBackendName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-fa
         package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/api/output'
 
   buildDeployDevelopmentFrontend:
